assignments/7ingress-httprouting/podinfo-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-service  
spec:
  ports:
    - port: 80
  selector:
    app: podinfo
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: podinfo-ingress  
  annotations:        
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: <youruniquename>.eebc76e8ddaf4fe9b953.eastus.aksapp.io
    http:
      paths:
      - backend:
          serviceName: podinfo-service
          servicePort: 80
